--- a/src/main/webapp/app/entities/medicament/update/medicament-update.component.html
+++ b/src/main/webapp/app/entities/medicament/update/medicament-update.component.html
@@ -60,7 +60,7 @@
           </select>
         </div>
 
-        <div class="form-group">
+        <!-- <div class="form-group">
           <label class="form-control-label" for="field_user">User</label>
           <select class="form-control" id="field_user" data-cy="user" name="user" formControlName="user">
             <option [ngValue]="null"></option>
@@ -71,7 +71,7 @@
               {{ userOption.login }}
             </option>
           </select>
-        </div>
+        </div> -->
       </div>
 
       <div>
