--- a/src/main/webapp/app/entities/vente/update/vente-update.component.html
+++ b/src/main/webapp/app/entities/vente/update/vente-update.component.html
@@ -11,7 +11,7 @@
           <input type="number" class="form-control" name="id" id="field_id" data-cy="id" formControlName="id" [readonly]="true" />
         </div>
 
-        <div class="form-group">
+        <!-- <div class="form-group">
           <label class="form-control-label" for="field_date">Date</label>
           <div class="d-flex">
             <input
@@ -24,7 +24,7 @@
               placeholder="YYYY-MM-DD HH:mm"
             />
           </div>
-        </div>
+        </div> -->
 
         <div class="form-group">
           <label class="form-control-label" for="field_nombre">Nombre</label>
