add field to vente

--- a/src/main/webapp/app/entities/vente/detail/vente-detail.component.html
+++ b/src/main/webapp/app/entities/vente/detail/vente-detail.component.html
@@ -22,6 +22,10 @@
         <dd>
           <span>{{ vente.nombre }}</span>
         </dd>
+        <dt><span>Total</span></dt>
+        <dd>
+          <span>{{ vente.total }}</span>
+        </dd>
         <dt><span>Medicament</span></dt>
         <dd>
           <div *ngIf="vente.medicament">
