--- a/src/main/webapp/app/entities/vente/update/vente-update.component.html
+++ b/src/main/webapp/app/entities/vente/update/vente-update.component.html
@@ -31,6 +31,11 @@
           <input type="number" class="form-control" name="nombre" id="field_nombre" data-cy="nombre" formControlName="nombre" />
         </div>
 
+        <!-- <div class="form-group">
+          <label class="form-control-label" for="field_total">Total</label>
+          <input type="number" class="form-control" name="total" id="field_total" data-cy="total" formControlName="total" />
+        </div> -->
+
         <div class="form-group">
           <label class="form-control-label" for="field_medicament">Medicament</label>
           <select class="form-control" id="field_medicament" data-cy="medicament" name="medicament" formControlName="medicament">
